long series of attempts to get the landing page to show a component, finally working

--- a/crystal-dashboard/public/index.html
+++ b/crystal-dashboard/public/index.html
@@ -34,7 +34,7 @@
     <div id="root"></div>
     <!-- TRACKING WHO VISIT MY LIVE DEMO PAGE. PLEASE REMOVE THE LINE BELOW IF YOU ARE GOING TO USE IN YOUR PROJECT -->
     <!-- Facebook Pixel Code -->
-    <script>
+    <!-- <script>
       !function(f,b,e,v,n,t,s)
       {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
       n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -45,7 +45,7 @@
       'https://connect.facebook.net/en_US/fbevents.js');
       fbq('init', '1567561193573896');
       fbq('track', 'PageView');
-    </script>
+    </script> -->
     <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1567561193573896&ev=PageView&noscript=1"/></noscript>
     <!-- End Facebook Pixel Code -->
 
